# Roller-Coaster-Simulation

./: CMakeLists.txt  README.md
include/geometry/: curve.h  curvefileio.h
include/math/: mat4f.h  vec3f.h
include/opengl/: CoasterPhysics.h  Geometry.h  GraphicsProgram.h  RenderingEngine.h  openglmatrix.h  program.h  shader.h
include/scene/: Model.h  camera.h
resources/shaders/: phong_fs.glsl  phong_vs.glsl
resources/sounds/: Sound_Effects.txt
src/geometry/: curve.cpp  curvefileio.cpp
src/math/: mat4f.cpp  vec3f.cpp
src/opengl/: CoasterPhysics.cpp  Geometry.cpp  GraphicsProgram.cpp  RenderingEngine.cpp  main.cpp  openglmatrix.cpp  program.cpp  shader.cpp
src/scene/: Model.cpp  camera.cpp
